Updated gitops config to include terraform actions, fmt, validate, init and plan

--- a/.github/workflows/gitops.yml
+++ b/.github/workflows/gitops.yml
@@ -7,8 +7,6 @@ name: CI
 on:
   push:
     branches: [ master, dev, stage ]
-  pull_request:
-    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -21,13 +19,22 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - uses: hashicorp/setup-terraform@v1
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+			- name: Terraform fmt
+				id: fmt
+				run: terraform fmt -check
+				continue-on-error: true
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+			- name: Terraform Init
+				id: init
+				run: terraform init
+
+			- name: Terraform Validate
+				id: validate
+				run: terraform validate -no-color
+
+			- name: Terraform Plan
+				id: plan
+				run: terraform plan -no-color
+				continue-on-error: true
