--- a/.github/workflows/gitops.yml
+++ b/.github/workflows/gitops.yml
@@ -7,7 +7,9 @@ name: CI
 on:
     push:
         branches: [ master, dev, stage ]
-
+defaults:
+    run:
+      working-directory: ./terraform
         # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
     # This workflow contains a single job called "build"
