--- a/.github/workflows/gitops.yml
+++ b/.github/workflows/gitops.yml
@@ -22,6 +22,12 @@ jobs:
           # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
+      - uses: kciter/terraform-apply-for-aws-action@v3
+        with:
+          access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          region: us-east-1
+          variables: var=${{ github.sha }}
 
       - name: Terraform fmt
         id: fmt
