--- a/.github/workflows/gitops.yml
+++ b/.github/workflows/gitops.yml
@@ -28,7 +28,7 @@ jobs:
           secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           region: us-east-1
           variables: var=${{ github.sha }}
-
+          path: ./terraform
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -check
