--- a/.github/workflows/gitops.yml
+++ b/.github/workflows/gitops.yml
@@ -10,6 +10,9 @@ on:
 defaults:
     run:
       working-directory: ./terraform
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
     # This workflow contains a single job called "build"
@@ -22,13 +25,13 @@ jobs:
           # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
-      - uses: kciter/terraform-apply-for-aws-action@v3
-        with:
-          access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          region: us-east-1
-          variables: var=${{ github.sha }}
-          path: ./terraform
+        #      - uses: kciter/terraform-apply-for-aws-action@v3
+        #        with:
+        #          access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        #          secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        #          region: us-east-1
+        #          variables: var=${{ github.sha }}
+        #          path: ./terraform
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -check
