--- a/.github/workflows/gitops.yml
+++ b/.github/workflows/gitops.yml
@@ -31,6 +31,7 @@ jobs:
         #          path: ./terraform
       - name: Terraform fmt
         id: fmt
+        if: ${{ github.branch}}
         run: terraform fmt -check
         continue-on-error: true
         env:
@@ -53,7 +54,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color
+        run: terraform plan --var-file=${GITHUB_REF##*/}.tfvars
         continue-on-error: true
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
