Added terraform apply step to github actions workflow

--- a/.github/workflows/development-gitops.yml
+++ b/.github/workflows/development-gitops.yml
@@ -53,7 +53,13 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform workspace select development && terraform plan --var-file=${GITHUB_REF##*/}.tfvars
-        continue-on-error: true
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      
+      - name: Terraform Apply
+        id: apply
+        run: terraform apply --var-file="development.tfvars" -auto-apply
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
