Fixed auto approve flag

--- a/.github/workflows/development-gitops.yml
+++ b/.github/workflows/development-gitops.yml
@@ -59,7 +59,7 @@ jobs:
       
       - name: Terraform Apply
         id: apply
-        run: terraform apply --var-file="development.tfvars" -auto-apply
+        run: terraform apply --var-file="development.tfvars" -auto-approve
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
