--- a/.github/workflows/staging-gitops.yml
+++ b/.github/workflows/staging-gitops.yml
@@ -6,7 +6,7 @@ name: CI
 # events but only for the master branch
 on:
     push:
-        branches: [ master ]
+        branches: [ staging ]
 defaults:
     run:
       working-directory: ./terraform
@@ -54,7 +54,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform workspace select production && terraform plan --var-file=${GITHUB_REF##*/}.tfvars
+        run: terraform workspace select staging && terraform plan --var-file=${GITHUB_REF##*/}.tfvars
         continue-on-error: true
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -62,7 +62,7 @@ jobs:
       
       - name: Terraform Apply
         id: apply
-        run: terraform apply --var-file="master.tfvars" -auto-approve
+        run: terraform apply --var-file="staging.tfvars" -auto-approve
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
